# Titanic_Project

./: .gitignore  Finalprediction.csv  README.md  app.py  final_pipeline.py  main.py  model_exploration.ipynb  pyproject.toml  transformer.py  tree_pipeline.joblib
