[project]
name = "titanic-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fsspec>=2026.6.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "sweetviz>=2.3.3",
    "xgboost>=3.3.0",
]
